--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ Flask==1.1.2
 Flask-Assets==2.0
 Flask-Compress==1.5.0
 future==0.18.2
-gunicorn==20.0.4
+gunicorn
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
